# basic-semantic-search

./: .gitignore  README.md  embeddings-generator.ipynb  hello.py  pyproject.toml  semantic-search-with-dataset.ipynb
