[project]
name = "pca-embeddings-project"
version = "0.1.0"
description = "A vector semantic search project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.1.0",
    "faiss-cpu>=1.9.0",
    "ipywidgets>=8.1.5",
    "nbconvert[webpdf]>=7.16.4",
    "torch>=2.5.1",
    "transformers[sentencepiece]>=4.46.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
